# Swoirenberg

./: .gitignore  Package.swift  templateInfo.plist
EmptyRust/: Cargo.toml
EmptyRust/src/: lib.rs
Rust/: Cargo.toml
Rust/assets/: testCircuit.json
Rust/src/: lib.rs
Scripts/: build.sh  build_empty_rust.sh  create-framework.sh
Swift/Sources/Swoirenberg/: SwiftBridge.swift  SwiftBridgeCore.swift  Swoirenberg.swift
