[package]
name = "swoirenberg"
version = "1.0.0-beta.3-2"
authors = ["Bartosz Nowak", "Michael Elliot", "Theo Madzou"]
repository = "https://github.com/Swoir/Swoirenberg.git"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
swift-bridge = "0.1"

[profile.release]
strip = "symbols"
lto = true
